# aoc2019

./: LICENSE  aoc2019.cabal  shell.nix
src/: Inputs.hs  Main.hs  TestInputs.hs
src/Ex/: E1.hs  E2.hs  E3.hs  E4.hs
